--- a/app/views/partials/template/header.ejs
+++ b/app/views/partials/template/header.ejs
@@ -1,6 +1,6 @@
 <header>
-  <div class="jumbotron hidden-xs">
-        <h2>Node JS Example</h2>
+  <div class="">
+        <h2><%= siteTitle %></h2>
   </div><!-- jumbotron -->
 
   <nav class="navbar">
